--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <li>My Account Address: <span id="accountAddr"></span></li>
   <li><input id="inpScore" type="text"><button onclick="uploadScore()">점수 기록</button>
       <div id="result"></div></li>
-  <img src="data/img/cryptolmypic_scoreboard.png" alt="error TT" />
+  <img src="data/img/scoreboard.png" alt="error TT" />
   <li> ** 게임스코어 보드 : 총 등록자수 <span id="totalPlayers"></span>명 **</li>
   <li> 1위 : <span id='GOLD'></span></li>
   <li> 2위 : <span id='SILVER'></span></li>
