--- a/index.html
+++ b/index.html
@@ -52,87 +52,14 @@
 
 <script src="https://cdn.rawgit.com/ethereum/web3.js/develop/dist/web3.js"></script>
 <script>
-var contractAddress = '0x5a666baeb29be4ef15b4227e123527d64744e315';
-var abi = [
-	{
-		"constant": false,
-		"inputs": [
-			{
-				"name": "_owner",
-				"type": "address"
-			},
-			{
-				"name": "_s",
-				"type": "uint16"
-			}
-		],
-		"name": "SetScore",
-		"outputs": [],
-		"payable": false,
-		"stateMutability": "nonpayable",
-		"type": "function"
-	},
-	{
-		"constant": true,
-		"inputs": [
-			{
-				"name": "_id",
-				"type": "uint256"
-			}
-		],
-		"name": "GetScore",
-		"outputs": [
-			{
-				"name": "",
-				"type": "address"
-			},
-			{
-				"name": "",
-				"type": "uint16"
-			}
-		],
-		"payable": false,
-		"stateMutability": "view",
-		"type": "function"
-	},
-	{
-		"constant": true,
-		"inputs": [],
-		"name": "GetTotalPlayers",
-		"outputs": [
-			{
-				"name": "",
-				"type": "uint16"
-			}
-		],
-		"payable": false,
-		"stateMutability": "view",
-		"type": "function"
-	},
-	{
-		"constant": true,
-		"inputs": [
-			{
-				"name": "",
-				"type": "uint256"
-			}
-		],
-		"name": "scores",
-		"outputs": [
-			{
-				"name": "owner",
-				"type": "address"
-			},
-			{
-				"name": "score",
-				"type": "uint16"
-			}
-		],
-		"payable": false,
-		"stateMutability": "view",
-		"type": "function"
-	}
-];
+
+<!-- 컨트랙트 주소 -->
+var contractAddress = '0xa64763a05875a0f8426c77ccaeef624a3b04f33c';
+var abi = [ { "constant": false, "inputs": [ { "name": "_owner", "type": "address" }, { "name": "_s", "type": "uint16" } ], "name": "SetScore", "outputs": [], "payable": false, "stateMutability": "nonpayable", "type": "function" }, { "constant": true, "inputs":
+[ { "name": "_id", "type": "uint256" } ], "name": "GetScore", "outputs": [ { "name": "", "type": "address" }, { "name": "", "type": "uint16" } ], "payable": false, "stateMutability": "view", "type": "function" }, { "constant": true, "inputs": [], "name":
+"GetTotalPlayers", "outputs": [ { "name": "", "type": "uint16" } ], "payable": false, "stateMutability": "view", "type": "function" }, { "constant": true, "inputs": [ { "name": "", "type": "uint256" } ], "name": "scores", "outputs": [ { "name": "owner",
+"type": "address" }, { "name": "score", "type": "uint16" } ], "payable": false, "stateMutability": "view", "type": "function" } ];
+
 
 var ScoreboardContract;
 var Scoreboard;
