scoreboard addr + score

--- a/index.html
+++ b/index.html
@@ -103,21 +103,25 @@ function getTotalPlayers() {
 
 function showScoreboard(){
   var scoreArray = new Array(3);
+  var addrArray = new Array(3);
   Scoreboard.GetScore(0,function(e,r){
     scoreArray[0] = r[1].toNumber();
+    addrArray[0] = r[0];
 
     Scoreboard.GetScore(1,function(e,r){
       scoreArray[1] = r[1].toNumber();
+      addrArray[1] = r[0];
 
       Scoreboard.GetScore(2,function(e,r){
          scoreArray[2] = r[1].toNumber();
+         addrArray[2] = r[0];
 
          scoreArray.sort(function(a, b) {
            return b - a;
          });
-         document.getElementById('GOLD').innerHTML = scoreArray[0];
-         document.getElementById('SILVER').innerHTML = scoreArray[1];
-         document.getElementById('BRONZE').innerHTML = scoreArray[2];
+         document.getElementById('GOLD').innerHTML = addrArray[0] +','+ scoreArray[0];
+         document.getElementById('SILVER').innerHTML = addrArray[1] +','+ scoreArray[1];
+         document.getElementById('BRONZE').innerHTML = addrArray[2] +','+ scoreArray[2];
 
        });
     });
