--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
   <li>My Account Address: <span id="accountAddr"></span></li>
   <li><input id="inpScore" type="text"><button onclick="uploadScore()">점수 기록</button>
       <div id="result"></div></li>
-  <img src="data/img/scoreboard.png" />
+
+      <div class="scoreboard">
+        <h1> hello </h1>
+      </div>
+  
   <li> ** 게임스코어 보드 : 총 등록자수 <span id="totalPlayers"></span>명 **</li>
   <li> 1위 : <span id='GOLD'></span></li>
   <li> 2위 : <span id='SILVER'></span></li>
@@ -119,9 +123,9 @@ function showScoreboard(){
          scoreArray.sort(function(a, b) {
            return b - a;
          });
-         document.getElementById('GOLD').innerHTML = scoreArray[0]+'point, ['+ addrArray[0]+']';
-         document.getElementById('SILVER').innerHTML = scoreArray[1]+'point, ['+ addrArray[1]+']';
-         document.getElementById('BRONZE').innerHTML = scoreArray[2]+'point, ['+ addrArray[2]+']';
+         document.getElementById('GOLD').innerHTML = scoreArray[0]+' point, ['+ addrArray[0]+']';
+         document.getElementById('SILVER').innerHTML = scoreArray[1]+' point, ['+ addrArray[1]+']';
+         document.getElementById('BRONZE').innerHTML = scoreArray[2]+' point, ['+ addrArray[2]+']';
 
        });
     });
