--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
   <li><input id="inpScore" type="text"><button onclick="uploadScore()">점수 기록</button>
       <div id="result"></div></li>
 
+       <!-- 스코어 보드 이미지 표시영역 -->
       <div class="scoreboard">
         <h1> hello </h1>
       </div>
-  
+
   <li> ** 게임스코어 보드 : 총 등록자수 <span id="totalPlayers"></span>명 **</li>
   <li> 1위 : <span id='GOLD'></span></li>
   <li> 2위 : <span id='SILVER'></span></li>
