--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div id="result"></div></li>
 
        <!-- 스코어 보드 이미지 표시영역 -->
-      <div class="scoreboard">
+      <div class="scoreboard" width=device-wdith height = 200px>
         <h1> hello </h1>
       </div>
 
