--- a/index.html
+++ b/index.html
@@ -34,14 +34,19 @@
       <div id="result"></div></li>
 
        <!-- 스코어 보드 이미지 표시영역 -->
-      <div class="scoreboard" width=device-wdith height = 200px>
-        <h1> hello </h1>
+
+
+      <div id='scoreboard'>
+
+        <span id='scoreboard-title' ="center"> Cryptolympic Scoreboard </span><br/>
+        <span id='GOLD' class='record'> none </span><br/>
+        <span id='SILVER' class='record'> none </span><br/>
+        <span id='BRONZE' class='record'> none </span><br/>
+
+
       </div>
 
   <li> ** 게임스코어 보드 : 총 등록자수 <span id="totalPlayers"></span>명 **</li>
-  <li> 1위 : <span id='GOLD'></span></li>
-  <li> 2위 : <span id='SILVER'></span></li>
-  <li> 3위 : <span id='BRONZE'></span></li>
 
 </ul>
         <!-- melonJS Library -->
