--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       <div id='scoreboard'>
 
-        <span id='scoreboard-title' ="center"> </span><br/>
+        <span id='scoreboard-title' align="center"> </span><br/></br>
         <span id='GOLD' class='record'> none </span><br/>
         <span id='SILVER' class='record'> none </span><br/>
         <span id='BRONZE' class='record'> none </span><br/>
@@ -116,15 +116,19 @@ function showScoreboard(){
   var addrArray = new Array(3);
   Scoreboard.GetScore(0,function(e,r){
     scoreArray[0] = r[1].toNumber();
-    addrArray[0] = r[0];
+    addrArray[0] = r[0].toString();
+    addrArray[0] = addrArray[0].substring(0,4);
+
 
     Scoreboard.GetScore(1,function(e,r){
       scoreArray[1] = r[1].toNumber();
-      addrArray[1] = r[0];
+      addrArray[1] = r[0].toString();
+      addrArray[1] = addrArray[1].substring(0,4);
 
       Scoreboard.GetScore(2,function(e,r){
          scoreArray[2] = r[1].toNumber();
-         addrArray[2] = r[0];
+         addrArray[2] = r[0].toString();
+         addrArray[2] = addrArray[2].substring(0,4);
 
          scoreArray.sort(function(a, b) {
            return b - a;
